[package]
name = "crypto_vectors"
version = "0.1.4"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Cryptography Test Vectors"
documentation = "https://docs.rs/crypto_vectors"
readme = "README.md"
repository = "https://github.com/sheroz/crypto_vectors"
license = "MIT"
keywords = ["cryptography", "cipher", "test", "vector", "test-vectors"]
categories = ["cryptography"]
